Reconfigure hibernate states to be more inline with what they initially were.

--- a/framework-laptop/defaults.yaml
+++ b/framework-laptop/defaults.yaml
@@ -55,18 +55,33 @@ framework-laptop:
     # Learn more about sleep states here:
     # https://www.kernel.org/doc/html/v4.18/admin-guide/pm/sleep-states.html
     #
-    # To instantly enter hibernate mode, you could add a button in GNOME via an
+    # hibernate:
+    # This profile will not change the default suspend behavior.
+    # To enter hibernate mode, you could add a button in GNOME via an
     # extension to get a a hibernate item in your power menu. *Adding
     # such an item has not been tested.* Hibernating via
     # `systemctl hibernate` works fine. Setting the power button action to
     # Hibernate also works as expected.
-    # The other two options function as described in the systemd manual:
+    #
+    # hydrid_sleep:
+    # https://wiki.archlinux.org/title/Power_management#Hybrid-sleep_on_suspend_or_hibernation_request
+    # This method will effectively suspend to RAM but also backup the state to
+    # disk, for a further reduction in battery usage in suspended state, with
+    # the added backup of disk state in the event the laptop drains completely
+    # while in suspend mode.
+    # 
+    # suspend_then_hibernate:
+    # This option sets the system to suspend mode (as it normally would upon
+    # inactivity, the suspend button, or via `systemctl suspend`), however,
+    # after the designated wait time it will then enter hibernate mode,
+    # writing RAM state to disk and powering off the system. You can edit
+    # the behavior of this mode below.
+    # 
+    # You can learn about these options in the systemd manual:
     # https://www.freedesktop.org/software/systemd/man/systemd-sleep.conf.html
     mode: suspend_then_hibernate
 
     suspend_then_hibernate:
-
-      suspend_mode: suspend 
 
       # Useful states are `mem` and `freeze`
       # `mem` means suspend to RAM or S3
@@ -80,49 +95,8 @@ framework-laptop:
       # https://www.kernel.org/doc/html/v4.18/admin-guide/pm/sleep-states.html#basic-sysfs-interfaces-for-system-suspend-and-hibernation
       suspend_state: mem
 
-      # With this setting, the system will remain in `suspend` state even after
-      # the configured `hibernate_delay_sec` puts the system in hibernate mode.
-      hibernate_mode: suspend
-
-      hibernate_state: disk
-
       hibernate_delay_sec: 120min
 
-
-    hybrid_sleep:
-      # https://wiki.archlinux.org/title/Power_management#Hybrid-sleep_on_suspend_or_hibernation_request
-
-      suspend_mode: suspend 
-
-      suspend_state: disk
-
-      hibernate_mode: suspend
-
-      hibernate_state: disk
-
-      
-    hibernate:
-      # This is a more aggressive hibernate profile than `suspend_then_hibernate` or `hybrid_sleep`.
-      # Even though this mode will still go into suspend mode before hibernating,
-      # the differences are:
-      #  1. this profile will hibernate much sooner
-      #  2. this profile will shutdown the system once in hibernate mode.
-      #  3. this profile will skip suspend phase (and go straight to hibernate) when
-      #     the laptop lid is closed and the system is on battery power.
-      #     The default wait time should be 90sec on most systems.
-
-      suspend_mode: suspend
-
-      suspend_state: mem
-
-      # After the system enters hibernation and writes the image to disk
-      # It is appropriate for the system to fully shut down.
-      # Upon reboot, the image will be read back into memory.
-      hibernate_mode: shutdown
-
-      hibernate_state: disk
-
-      hibernate_delay_sec: 10min
 
   hpet:
     include: False
